--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "control_vacaciones_v.2.0",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
@@ -13,11 +13,16 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "express": "^4.18.2",
     "mysql2": "^3.6.0",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "pdfkit": "^0.15.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.9"
+  },
+  "engines": {
+    "node": ">=18.16.0"
   }
 }
