--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@libsql/client": "^0.15.15",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "express": "^4.18.2",
     "mysql2": "^3.6.0",
-    "nodemailer": "^6.9.7",
+    "nodemailer": "^7.0.10",
     "pdfkit": "^0.15.1"
   },
   "devDependencies": {
